--- a/frontend/app/nav/nav/nav.component.scss
+++ b/frontend/app/nav/nav/nav.component.scss
@@ -115,3 +115,9 @@
 .mat-expansion-panel-header {
   padding: 0 8px;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 8px;
+}
