Handle disabled feeds and show a toast when adding feeds.
Fix linter errors and tests.

--- a/frontend/app/nav/feed/feed.component.html
+++ b/frontend/app/nav/feed/feed.component.html
@@ -1,9 +1,7 @@
 <div class="feed"
      [class.failing]="fd.feed.failingSince"
-     [class.disabled]="fd.feed.disabled"
      routerLinkActive="active">
-  <a *ngIf="!fd.feed.disabled"
-     class="link mat-subheading-1"
+  <a class="link mat-subheading-1"
      routerLink="/feed/{{fd.feed.id}}"
      draggable="false"
      ondragstart="return false;">
