--- a/frontend/app/nav/add-dialog/add-dialog.component.html
+++ b/frontend/app/nav/add-dialog/add-dialog.component.html
@@ -22,6 +22,10 @@
                  matTooltip="Override the automatically detected title of the feed. Optional.">
         </mat-form-field>
         <div align="right">
+          <button mat-button
+                  mat-dialog-close>
+            Cancel
+          </button>
           <button type="submit"
                   [disabled]="!feedUrl.valid"
                   mat-button>
