Tweak Nav CSS and fix ordering of disabled feeds.

--- a/frontend/app/nav/feed/feed.component.html
+++ b/frontend/app/nav/feed/feed.component.html
@@ -1,5 +1,6 @@
 <div class="feed"
      [class.failing]="fd.feed.failingSince"
+     [class.disabled]="fd.feed.disabled"
      routerLinkActive="active">
   <a class="link mat-subheading-1"
      routerLink="/feed/{{fd.feed.id}}"
