--- a/frontend/app/nav/nav/nav.component.scss
+++ b/frontend/app/nav/nav/nav.component.scss
@@ -12,7 +12,6 @@
   width: 200px;
   z-index: 2;
 
-
   .link {
     padding: 9px 8px 7px 0;
     line-height: 24px;
@@ -21,16 +20,19 @@
   .unread {
     margin: 0 0 0 4px;
   }
-
 }
 
 .home-link {
-  height: 40px;
   padding: 4px;
 
   &.has-header {
     padding-right: 0;
     margin-top: 40px;
+  }
+
+  .active {
+    background-color: white;
+    color: black;
   }
 }
 
@@ -40,7 +42,6 @@
   flex: 1 1 auto;
   margin: 0;
   overflow: hidden;
-  padding: 2px 0;
   text-decoration: unset;
   white-space: nowrap;
 
@@ -120,4 +121,8 @@
   display: flex;
   flex-direction: row-reverse;
   margin-top: 8px;
+
+  &.hidden {
+    display: none;
+  }
 }
