--- a/frontend/app/nav/nav/nav.component.html
+++ b/frontend/app/nav/nav/nav.component.html
@@ -69,18 +69,20 @@
                                 [collapsedHeight]="'48px'"
                                 [expandedHeight]="'48px'"
                                 routerLinkActive="active">
-      <a class="link"
-         routerLink="/category/{{nc.cData.category.name}}">
-        <div class="title">
-          {{nc.cData.category.title}}
-        </div>
-        <div class="spacer"></div>
-        <div class="unread"
-             *ngIf="nc.cData.unread">
-          ({{nc.cData.unread}})
-        </div>
-        <!-- TODO - show unread counter -->
-      </a>
+      <div class="link-div"
+           (click)="$event.stopPropagation()">
+        <a class="link mat-subheading-2"
+           routerLink="/category/{{nc.cData.category.name}}">
+          <div class="title">
+            {{nc.cData.category.title}}
+          </div>
+          <div class="spacer"></div>
+          <div class="unread"
+               *ngIf="nc.cData.unread">
+            ({{nc.cData.unread}})
+          </div>
+        </a>
+      </div>
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
       <awrss-feed [class.hidden]="dragging"
