--- a/frontend/app/main-view/item/item.component.html
+++ b/frontend/app/main-view/item/item.component.html
@@ -11,7 +11,7 @@
   <a *ngIf="showFeed"
      class="feed-link mat-body-strong"
      routerLink="/feed/{{feed.id}}">
-    {{feed.userTitle || feed.title || feed.siteUrl || feed.url}}
+    {{feed | feedTitle}}
   </a>
 </div>
 <a class="link primary-text"
