--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -1,7 +1,19 @@
-<!-- TODO: title bar (when appropriate) and date/read filer bar -->
+<!-- <awrss&#45;main&#45;view&#45;header *ngIf="!(mobile | async)" -->
+<!--                         class="header" -->
+<!--                         [mobile]="false" -->
+<!--                         [feed]="feed" -->
+<!--                         [category]="category"> -->
+<!-- </awrss&#45;main&#45;view&#45;header> -->
 
 <cdk-virtual-scroll-viewport itemSize="52"
-                             class="item-list">
+                             class="item-list"
+                             [class.mobile]="mobile | async">
+  <!-- <awrss&#45;main&#45;view&#45;header *ngIf="mobile | async" -->
+  <!--                         class="header" -->
+  <!--                         [mobile]="true" -->
+  <!--                         [feed]="feed" -->
+  <!--                         [category]="category"> -->
+  <!-- </awrss&#45;main&#45;view&#45;header> -->
   <awrss-item *cdkVirtualFor="let item of sortedItems; let even = even; let odd = odd"
               [item]="item"
               [showFeed]="!feed"
