More work on header and edit dialog.
Handle a couple of konachan quirks.

--- a/frontend/app/main-view/item/item.component.html
+++ b/frontend/app/main-view/item/item.component.html
@@ -28,6 +28,7 @@
   </div>
   <div class="spacer"></div>
   <div (contextmenu)="$event.stopPropagation()"
+       matTooltip="{{item.title}}"
        class="title">
     {{item.title}}
   </div>
