--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -1,9 +1,9 @@
-<!-- <awrss&#45;main&#45;view&#45;header *ngIf="!(mobile | async)" -->
-<!--                         class="header" -->
-<!--                         [mobile]="false" -->
-<!--                         [feed]="feed" -->
-<!--                         [category]="category"> -->
-<!-- </awrss&#45;main&#45;view&#45;header> -->
+<awrss-main-view-header *ngIf="!(mobile | async)"
+                        class="header"
+                        [mobile]="false"
+                        [feed]="feed"
+                        [category]="category">
+</awrss-main-view-header>
 
 <cdk-virtual-scroll-viewport itemSize="52"
                              class="item-list"
