More cloudflare changes. WIP bulk mark as read feature.

--- a/frontend/app/admin/add-dialog/add-dialog.component.html
+++ b/frontend/app/admin/add-dialog/add-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<mat-dialog-content>
   <mat-tab-group>
     <mat-tab label="Feed">
       <form [formGroup]="feedForm"
@@ -96,4 +96,4 @@
       </form>
     </mat-tab>
   </mat-tab-group>
-</div>
+</mat-dialog-content>
