--- a/frontend/app/main-view/main-view/header.component.scss
+++ b/frontend/app/main-view/main-view/header.component.scss
@@ -1,10 +1,10 @@
 .header {
   box-sizing: border-box;
   display: flex;
+  height: 40px;
   padding: 0 8px;
 
   &.mobile {
-
     height: 52px;
     padding: 6px 8px;
   }
@@ -35,7 +35,7 @@
 }
 
 .site-link .mat-icon {
-  font-size: 22px;
+  font-size: 22.5px;
 }
 
 .spacer {
