--- a/frontend/app/admin/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/app/admin/confirmation-dialog/confirmation-dialog.component.html
@@ -1,7 +1,16 @@
-<h2>
+<h2 mat-dialog-title>
+  {{data.title}}
 </h2>
 <mat-dialog-content>
-
+  <p *ngFor="let line of text">{{line}}</p>
 </mat-dialog-content>
-<mat-dialog-actions>
+<mat-dialog-actions align="end">
+  <button mat-button
+          mat-dialog-close>
+    Cancel
+  </button>
+  <button mat-button
+          [mat-dialog-close]="true">
+    Confirm
+  </button>
 </mat-dialog-actions>
