--- a/frontend/app/main-view/main-view/header.component.html
+++ b/frontend/app/main-view/main-view/header.component.html
@@ -18,6 +18,13 @@
     </div>
   </h2>
   <div class="spacer"></div>
+  <button class="read-button"
+          (click)="markFeedAsRead()"
+          *ngIf="feed && maxItemId !== undefined"
+          matTooltip="Mark all items read"
+          mat-icon-button>
+    <mat-icon>archive</mat-icon>
+  </button>
   <button class="edit-button"
           (click)="edit()"
           *ngIf="feed || category"
