--- a/frontend/app/main-view/main-view/main-view.component.html
+++ b/frontend/app/main-view/main-view/main-view.component.html
@@ -2,7 +2,8 @@
                         class="header"
                         [mobile]="false"
                         [feed]="feed"
-                        [category]="category">
+                        [category]="category"
+                        [maxItemId]="maxItemId">
 </awrss-main-view-header>
 
 <cdk-virtual-scroll-viewport itemSize="52"
@@ -12,7 +13,8 @@
   <!--                         class="header" -->
   <!--                         [mobile]="true" -->
   <!--                         [feed]="feed" -->
-  <!--                         [category]="category"> -->
+  <!--                         [category]="category" -->
+  <!--                         [maxItemId]="maxItemId"> -->
   <!-- </awrss&#45;main&#45;view&#45;header> -->
   <awrss-item *cdkVirtualFor="let item of sortedItems; let even = even; let odd = odd"
               [item]="item"
