Allow editing of feeds

--- a/frontend/app/admin/add-dialog/add-dialog.component.html
+++ b/frontend/app/admin/add-dialog/add-dialog.component.html
@@ -56,6 +56,10 @@
           <mat-error *ngIf="categoryForm.controls['name'].hasError('required')">
             Name is required
           </mat-error>
+          <mat-error
+                     *ngIf="categoryForm.controls['name'].hasError('nameTaken')">
+            Name must be unique
+          </mat-error>
         </mat-form-field>
         <mat-form-field>
           <input matInput
