--- a/frontend/app/main-view/main-view/header.component.scss
+++ b/frontend/app/main-view/main-view/header.component.scss
@@ -34,6 +34,13 @@
   margin-top: 4px;
 }
 
+.header-title {
+  margin-top: 4px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .site-link .mat-icon {
   font-size: 22.5px;
 }
