Basic working admin page.
It's now possible to re-enable disabled feeds.

--- a/frontend/app/nav/nav/nav.component.html
+++ b/frontend/app/nav/nav/nav.component.html
@@ -145,6 +145,12 @@
 
   <div class="buttons"
        [class.hidden]="dragging">
+    <a routerLink="/admin"
+       routerLinkActive="active"
+       mat-button>
+      Admin
+    </a>
+    <div class="spacer"></div>
     <button (click)="openAddDialog()"
             aria-label="Add Feed or Category"
             mat-button
