--- a/frontend/app/admin/index/index.component.html
+++ b/frontend/app/admin/index/index.component.html
@@ -4,6 +4,12 @@
 <awrss-admin-body>
   <mat-list class="admin-pages">
     <mat-list-item>
+      <a routerLink="categories"
+         class="mat-headline">
+        Categories
+      </a>
+    </mat-list-item>
+    <mat-list-item>
       <a routerLink="feeds"
          class="mat-headline">
         Feeds
