Update dependencies. Tried Ivy, but it's broken and doesn't work.

--- a/frontend/app/main-view/main-view/header.component.html
+++ b/frontend/app/main-view/main-view/header.component.html
@@ -29,7 +29,7 @@
   <button class="edit-button"
           (click)="edit()"
           *ngIf="feed || category"
-          matTooltip="edit {{feed && (feed | feedTitle) || category.title}}"
+          matTooltip="Edit {{feed && (feed | feedTitle) || category.title}}"
           mat-icon-button>
     <mat-icon>edit</mat-icon>
   </button>
