Disable marking entire feed as read when filtering.

--- a/frontend/app/main-view/main-view/header.component.html
+++ b/frontend/app/main-view/main-view/header.component.html
@@ -27,6 +27,7 @@
   <button class="read-button"
           (click)="markFeedAsRead()"
           *ngIf="feed && maxItemId !== undefined"
+          [disabled]="!!fuzzyString"
           matTooltip="Mark all items read"
           mat-icon-button>
     <mat-icon>archive</mat-icon>
